<resources>
    <string name="app_name">SkinCancer APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Skin Cancer APP</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Acerca de</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Diagnóstico</string>
    <string name="menu_slideshow">Historial</string>

    <!-- Menu inicio -->
    <string name="descAPP">Mediante esta herramienta, podrá obtener un diagnóstico rápido sobre manchas de la piel</string>
    <string name="descAPP2">Recuerde que esta aplicación ha sido realizada con fines informativos, por lo que debe visitar a un especialista tras su uso para confirmar su validez.</string>
    <string name="prevencion">La protección frente al sol es un factor clave para la prevención de lesiones: \n\n - Evite las horas punta de luz solar \n - Use protector solar \n - Es recomendable el uso de gafas y sombrero</string>
    <string name="opengal">Abrir galería</string>
    <string name="desc_abrir">Puede realizar un diagnóstico tomando una fotografía, o abriendo una de la galería:\n\n\t\t-Revise que la calidad es aceptable\n\n\t\t-Compruebe que la macha queda \n\t\t centrada\n\n\t\t-Puede recortar la imagen para \n\t\tcentrar el área de interés.</string>
    <string name="tip_img">Nota: el diagnóstico es meramente orientativo, y se recomienda visitar a un dermatólogo.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>