<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diagnostico.DiagnosticoFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/desc_abrir"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/infoNitidez"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallerybutton"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginStart="36dp"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/opengal"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/infoNitidez"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.74" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginEnd="36dp"
        android:padding="20dp"
        android:text="Tomar fotografía"
        app:cardElevation="20dp"
        app:iconGravity="top"
        app:layout_constraintBottom_toTopOf="@+id/infoNitidez"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/gallerybutton"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.74" />

    <androidx.cardview.widget.CardView
        android:id="@+id/infoNitidez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nitida"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_img"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>