<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCargar"
        android:layout_width="344dp"
        android:layout_height="247dp"

        android:layout_marginTop="80dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="227dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20sp"
                android:gravity="center"
                android:text="Bienvenido"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/descripcionMain2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/descripcionMain2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12pt"
                android:gravity="center"
                android:text="@string/descAPP"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/descripcionMain"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.721"
                tools:layout_editor_absoluteX="26dp" />

            <TextView
                android:id="@+id/descripcionMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12pt"
                android:gravity="center"
                android:text="@string/descAPP2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="27dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="144dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:text="@string/prevencion"
        android:textSize="15.5sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoCargar"
        app:layout_constraintVertical_bias="0.646" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="78dp"
        android:layout_marginBottom="68dp"
        android:alpha="0.8"
        android:src="@drawable/iconos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>